@@ -13,6 +13,11 @@ code and to keep track of all tags.
      ---------------------------------------------------------------
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
+
+4 October 2014 V. Ivanchenko (hadr-man-V10-00-12)
+------------------------------------------------
+- G4HadronicProcess - added creator model type to secondary 
+
 12 September 2014 Tatsumi Koi (hadr-man-V10-00-11)
 ------------------------------------------------
 - Add BuildPhysics method for Initialisation of models before run
